# Pipeline-processor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cli_test.yml  pylint.yml
PipelineProcessor/: BasicFunctionRepository.py  BasicStreamFunctionRepository.py  FileHandler.py  Processor.py  StreamFunctionRepository.py  YmlConfigLoader.py  commands.py
atk_training_pritam_wf_dynamic_loader/: BasicFunctionRepository.py  BasicStreamFunctionRepository.py  FileHandler.py  Processor.py  StreamFunctionRepository.py  YmlConfigLoader.py  base_clases.py  commands.py
tests/: custom.py  input.processed.txt  input.txt  pipeline.yml
